@@ -137,10 +137,10 @@ appended to the project name when generating static projects.  This can
 still be achieved by using the -name_modifier option.
 
 When generating static projects, inter-project dependencies will not be
-generated for libraries within vc6, em3, vc7, vc71 and vc8 workspaces.  The
+generated for libraries within vc6, em3, vc7, vc71 workspaces.  The
 reason is due to the fact that each static library that depended upon another
 would be combined at the library creation stage, resulting in extremely large
-libraries.
+libraries.  Dependencies are handled correctly by vc8.
 
 This behavior can be modified by setting the
 MPC_DEPENDENCY_COMBINED_STATIC_LIBRARY environment variable.  It will force
